# Nine-Mens-Morris-Pure-C-

./: CMakeLists.txt  board.cpp  board.h  game.cpp  game.h  main.cpp  player.cpp  player.h
Strategies/: initialTurnStrategy.cpp  initialTurnStrategy.h  jumpingTurnStrategy.cpp  jumpingTurnStrategy.h  movingTurnStrategy.cpp  movingTurnStrategy.h  turnStrategy.h
